Closed Bug 1354635 Opened 8 years ago Closed 8 years ago

Permissions are not sent to the content process when debugging service workers

Categories

(Core :: DOM: Service Workers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: nika, Assigned: nika)

References

Details

Attachments

(1 file)

Attaching a debugger to a service worker doesn't send down the permissions for the URL before sending it. This patch adds a gross workaround which will send down the permissions before the worker starts, which should be removed when service worker debugging is improved to support multiple content processes.
MozReview-Commit-ID: 8cUh5znQcFN
Attachment #8857179 - Flags: review?(catalin.badea392)
I don't think this bug will be fixed by bug 1231222 - so I think I'd still like to land this one separately soon (it will probably be made unnecessary by bug 1231213 when that lands).
Attachment #8857179 - Flags: review?(catalin.badea392) → review+
Pushed by michael@thelayzells.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/9ed8ee69a49d Send permissions to the content process when debugging service workers, r=catalinb
Pushed by michael@thelayzells.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/b05584769644 Part 2: Wrap JS line in devtools to satisfy eslint, a=bustage
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: