Bug 1354635 - Send permissions to the content process when debugging service workers, r=catalinb

MozReview-Commit-ID: 8cUh5znQcFN